// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`patches image fields > existing > group 1`] = `
{
  "group": [
    {
      "field": {
        "alt": null,
        "copyright": null,
        "dimensions": {
          "height": 1,
          "width": 1,
        },
        "edit": {
          "background": "transparent",
          "x": 0,
          "y": 0,
          "zoom": 0,
        },
        "id": "id-existing",
        "url": "https://images.unsplash.com/photo-1497436072909-60f360e1d4b1?w=2560&h=1440&fit=crop",
      },
    },
  ],
}
`;

exports[`patches image fields > existing > shared slice 1`] = `
{
  "slices": [
    {
      "id": "2ff58c741ba",
      "items": [
        {
          "field": {
            "alt": null,
            "copyright": null,
            "dimensions": {
              "height": 1,
              "width": 1,
            },
            "edit": {
              "background": "transparent",
              "x": 0,
              "y": 0,
              "zoom": 0,
            },
            "id": "id-existing",
            "url": "https://images.unsplash.com/photo-1604537466608-109fa2f16c3b?w=4240&h=2832&fit=crop",
          },
        },
      ],
      "primary": {
        "field": {
          "alt": null,
          "copyright": null,
          "dimensions": {
            "height": 1,
            "width": 1,
          },
          "edit": {
            "background": "transparent",
            "x": 0,
            "y": 0,
            "zoom": 0,
          },
          "id": "id-existing",
          "url": "https://images.unsplash.com/photo-1604537466608-109fa2f16c3b?w=4240&h=2832&fit=crop",
        },
        "group": [
          {
            "field": {
              "alt": null,
              "copyright": null,
              "dimensions": {
                "height": 1,
                "width": 1,
              },
              "edit": {
                "background": "transparent",
                "x": 0,
                "y": 0,
                "zoom": 0,
              },
              "id": "id-existing",
              "url": "https://images.unsplash.com/photo-1604537466608-109fa2f16c3b?w=4240&h=2832&fit=crop",
            },
          },
        ],
      },
      "slice_label": null,
      "slice_type": "at",
      "variation": "tortor",
      "version": "a79b9dd",
    },
  ],
}
`;

exports[`patches image fields > existing > slice 1`] = `
{
  "slices": [
    {
      "id": "e93cc3e4f28",
      "items": [
        {
          "field": {
            "alt": null,
            "copyright": null,
            "dimensions": {
              "height": 1,
              "width": 1,
            },
            "edit": {
              "background": "transparent",
              "x": 0,
              "y": 0,
              "zoom": 0,
            },
            "id": "id-existing",
            "url": "https://images.unsplash.com/photo-1604537529428-15bcbeecfe4d?w=4240&h=2832&fit=crop",
          },
        },
      ],
      "primary": {
        "field": {
          "alt": null,
          "copyright": null,
          "dimensions": {
            "height": 1,
            "width": 1,
          },
          "edit": {
            "background": "transparent",
            "x": 0,
            "y": 0,
            "zoom": 0,
          },
          "id": "id-existing",
          "url": "https://images.unsplash.com/photo-1604537529428-15bcbeecfe4d?w=4240&h=2832&fit=crop",
        },
      },
      "slice_label": "Pellentesque",
      "slice_type": "nulla_posuere",
    },
  ],
}
`;

exports[`patches image fields > existing > static zone 1`] = `
{
  "field": {
    "alt": null,
    "copyright": null,
    "dimensions": {
      "height": 1,
      "width": 1,
    },
    "edit": {
      "background": "transparent",
      "x": 0,
      "y": 0,
      "zoom": 0,
    },
    "id": "id-existing",
    "url": "https://images.unsplash.com/photo-1553531384-397c80973a0b?w=4335&h=6502&fit=crop",
  },
}
`;

exports[`patches image fields > new > group 1`] = `
{
  "group": [
    {
      "field": {
        "alt": null,
        "copyright": null,
        "dimensions": {
          "height": 1,
          "width": 1,
        },
        "edit": {
          "background": "transparent",
          "x": 0,
          "y": 0,
          "zoom": 0,
        },
        "id": "ef95d5daa4d",
        "url": "https://images.unsplash.com/photo-1441974231531-c6227db76b6e?w=2560&h=1705&fit=crop",
      },
    },
  ],
}
`;

exports[`patches image fields > new > shared slice 1`] = `
{
  "slices": [
    {
      "id": "2ff58c741ba",
      "items": [
        {
          "field": {
            "alt": null,
            "copyright": null,
            "dimensions": {
              "height": 1,
              "width": 1,
            },
            "edit": {
              "background": "transparent",
              "x": 0,
              "y": 0,
              "zoom": 0,
            },
            "id": "f2c3f8bfc90",
            "url": "https://images.unsplash.com/photo-1604537529428-15bcbeecfe4d?w=4240&h=2832&fit=crop",
          },
        },
      ],
      "primary": {
        "field": {
          "alt": null,
          "copyright": null,
          "dimensions": {
            "height": 1,
            "width": 1,
          },
          "edit": {
            "background": "transparent",
            "x": 0,
            "y": 0,
            "zoom": 0,
          },
          "id": "f2c3f8bfc90",
          "url": "https://images.unsplash.com/photo-1604537529428-15bcbeecfe4d?w=4240&h=2832&fit=crop",
        },
        "group": [
          {
            "field": {
              "alt": null,
              "copyright": null,
              "dimensions": {
                "height": 1,
                "width": 1,
              },
              "edit": {
                "background": "transparent",
                "x": 0,
                "y": 0,
                "zoom": 0,
              },
              "id": "f2c3f8bfc90",
              "url": "https://images.unsplash.com/photo-1604537529428-15bcbeecfe4d?w=4240&h=2832&fit=crop",
            },
          },
        ],
      },
      "slice_label": null,
      "slice_type": "at",
      "variation": "tortor",
      "version": "a79b9dd",
    },
  ],
}
`;

exports[`patches image fields > new > slice 1`] = `
{
  "slices": [
    {
      "id": "e93cc3e4f28",
      "items": [
        {
          "field": {
            "alt": null,
            "copyright": null,
            "dimensions": {
              "height": 1,
              "width": 1,
            },
            "edit": {
              "background": "transparent",
              "x": 0,
              "y": 0,
              "zoom": 0,
            },
            "id": "45306297c5e",
            "url": "https://images.unsplash.com/photo-1604537466608-109fa2f16c3b?w=4240&h=2832&fit=crop",
          },
        },
      ],
      "primary": {
        "field": {
          "alt": null,
          "copyright": null,
          "dimensions": {
            "height": 1,
            "width": 1,
          },
          "edit": {
            "background": "transparent",
            "x": 0,
            "y": 0,
            "zoom": 0,
          },
          "id": "45306297c5e",
          "url": "https://images.unsplash.com/photo-1604537466608-109fa2f16c3b?w=4240&h=2832&fit=crop",
        },
      },
      "slice_label": "Pellentesque",
      "slice_type": "nulla_posuere",
    },
  ],
}
`;

exports[`patches image fields > new > static zone 1`] = `
{
  "field": {
    "alt": null,
    "copyright": null,
    "dimensions": {
      "height": 1,
      "width": 1,
    },
    "edit": {
      "background": "transparent",
      "x": 0,
      "y": 0,
      "zoom": 0,
    },
    "id": "c5c95f8d3ac",
    "url": "https://images.unsplash.com/photo-1604537466608-109fa2f16c3b?w=4240&h=2832&fit=crop",
  },
}
`;

exports[`patches image fields > otherRepository > group 1`] = `
{
  "group": [
    {
      "field": {
        "alt": "Odio ut enim blandit volutpat maecenas volutpat blandit",
        "copyright": null,
        "dimensions": {
          "height": 1705,
          "width": 2560,
        },
        "edit": {
          "background": "#fdb338",
          "x": 349,
          "y": 115,
          "zoom": 1.5951464943576479,
        },
        "id": "4dcf07cfc26",
        "url": "https://images.unsplash.com/photo-1553531384-397c80973a0b",
      },
    },
  ],
}
`;

exports[`patches image fields > otherRepository > shared slice 1`] = `
{
  "slices": [
    {
      "id": "2ff58c741ba",
      "items": [
        {
          "field": {
            "alt": "Vitae et leo duis ut diam quam nulla porttitor massa id neque aliquam vestibulum",
            "copyright": null,
            "dimensions": {
              "height": 4000,
              "width": 6000,
            },
            "edit": {
              "background": "#61adcf",
              "x": -1586,
              "y": -2819,
              "zoom": 1.9393723758262054,
            },
            "id": "f5dbf0d9ed2",
            "url": "https://images.unsplash.com/photo-1441974231531-c6227db76b6e",
          },
        },
      ],
      "primary": {
        "field": {
          "alt": "Ut consequat semper viverra nam libero justo laoreet",
          "copyright": null,
          "dimensions": {
            "height": 2832,
            "width": 4240,
          },
          "edit": {
            "background": "#8efd5a",
            "x": 466,
            "y": -571,
            "zoom": 1.394663850868741,
          },
          "id": "f5dbf0d9ed2",
          "url": "https://images.unsplash.com/photo-1441974231531-c6227db76b6e",
        },
        "group": [
          {
            "field": {
              "alt": "Porttitor massa id neque aliquam vestibulum morbi blandit",
              "copyright": null,
              "dimensions": {
                "height": 4392,
                "width": 7372,
              },
              "edit": {
                "background": "#bc3178",
                "x": 1156,
                "y": -2223,
                "zoom": 1.602826201962965,
              },
              "id": "f5dbf0d9ed2",
              "url": "https://images.unsplash.com/photo-1441974231531-c6227db76b6e",
            },
          },
        ],
      },
      "slice_label": null,
      "slice_type": "at",
      "variation": "tortor",
      "version": "a79b9dd",
    },
  ],
}
`;

exports[`patches image fields > otherRepository > slice 1`] = `
{
  "slices": [
    {
      "id": "e93cc3e4f28",
      "items": [
        {
          "field": {
            "alt": "Vitae sapien pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis",
            "copyright": null,
            "dimensions": {
              "height": 4000,
              "width": 6000,
            },
            "edit": {
              "background": "#c361cc",
              "x": -751,
              "y": -404,
              "zoom": 1.6465649620272602,
            },
            "id": "4f4a69ff72d",
            "url": "https://images.unsplash.com/photo-1470770903676-69b98201ea1c",
          },
        },
      ],
      "primary": {
        "field": {
          "alt": "Nunc pulvinar sapien et ligula ullamcorper malesuada proin libero nunc consequat interdum varius sit",
          "copyright": null,
          "dimensions": {
            "height": 2832,
            "width": 4240,
          },
          "edit": {
            "background": "#55e3be",
            "x": -762,
            "y": 991,
            "zoom": 1.0207384987782544,
          },
          "id": "4f4a69ff72d",
          "url": "https://images.unsplash.com/photo-1470770903676-69b98201ea1c",
        },
      },
      "slice_label": "Pellentesque",
      "slice_type": "nulla_posuere",
    },
  ],
}
`;

exports[`patches image fields > otherRepository > static zone 1`] = `
{
  "field": {
    "alt": "Vulputate sapien nec sagittis aliquam malesuada bibendum arcu vitae elementum curabitur vitae nunc sed",
    "copyright": null,
    "dimensions": {
      "height": 2832,
      "width": 4240,
    },
    "edit": {
      "background": "#97acc6",
      "x": 1922,
      "y": -967,
      "zoom": 1.9765406541937358,
    },
    "id": "9abffab1d17",
    "url": "https://images.unsplash.com/photo-1446329813274-7c9036bd9a1f",
  },
}
`;

exports[`patches image fields > otherRepositoryEmpty > group 1`] = `
{
  "group": [
    {
      "field": {},
    },
  ],
}
`;

exports[`patches image fields > otherRepositoryEmpty > shared slice 1`] = `
{
  "slices": [
    {
      "id": "2ff58c741ba",
      "items": [
        {
          "field": {},
        },
      ],
      "primary": {
        "field": {},
        "group": [
          {
            "field": {},
          },
        ],
      },
      "slice_label": null,
      "slice_type": "at",
      "variation": "tortor",
      "version": "a79b9dd",
    },
  ],
}
`;

exports[`patches image fields > otherRepositoryEmpty > slice 1`] = `
{
  "slices": [
    {
      "id": "e93cc3e4f28",
      "items": [
        {
          "field": {},
        },
      ],
      "primary": {
        "field": {},
      },
      "slice_label": "Pellentesque",
      "slice_type": "nulla_posuere",
    },
  ],
}
`;

exports[`patches image fields > otherRepositoryEmpty > static zone 1`] = `
{
  "field": {},
}
`;

exports[`patches image fields > otherRepositoryWithThumbnails > group 1`] = `
{
  "group": [
    {
      "field": {
        "alt": "Odio ut enim blandit volutpat maecenas volutpat blandit",
        "copyright": null,
        "dimensions": {
          "height": 1705,
          "width": 2560,
        },
        "edit": {
          "background": "#fdb338",
          "x": 349,
          "y": 115,
          "zoom": 1.5951464943576479,
        },
        "id": "4dcf07cfc26",
        "square": {
          "alt": "Odio ut enim blandit volutpat maecenas volutpat blandit",
          "copyright": null,
          "dimensions": {
            "height": 1705,
            "width": 2560,
          },
          "edit": {
            "background": "#fdb338",
            "x": 349,
            "y": 115,
            "zoom": 1.5951464943576479,
          },
          "id": "4dcf07cfc26",
          "url": "https://images.unsplash.com/photo-1553531384-397c80973a0b?some=other&query=params",
        },
        "url": "https://images.unsplash.com/photo-1553531384-397c80973a0b?some=query",
      },
    },
  ],
}
`;

exports[`patches image fields > otherRepositoryWithThumbnails > shared slice 1`] = `
{
  "slices": [
    {
      "id": "2ff58c741ba",
      "items": [
        {
          "field": {
            "alt": "Vitae et leo duis ut diam quam nulla porttitor massa id neque aliquam vestibulum",
            "copyright": null,
            "dimensions": {
              "height": 4000,
              "width": 6000,
            },
            "edit": {
              "background": "#61adcf",
              "x": -1586,
              "y": -2819,
              "zoom": 1.9393723758262054,
            },
            "id": "f5dbf0d9ed2",
            "square": {
              "alt": "Vitae et leo duis ut diam quam nulla porttitor massa id neque aliquam vestibulum",
              "copyright": null,
              "dimensions": {
                "height": 4000,
                "width": 6000,
              },
              "edit": {
                "background": "#61adcf",
                "x": -1586,
                "y": -2819,
                "zoom": 1.9393723758262054,
              },
              "id": "f5dbf0d9ed2",
              "url": "https://images.unsplash.com/photo-1441974231531-c6227db76b6e?some=other&query=params",
            },
            "url": "https://images.unsplash.com/photo-1441974231531-c6227db76b6e?some=query",
          },
        },
      ],
      "primary": {
        "field": {
          "alt": "Ut consequat semper viverra nam libero justo laoreet",
          "copyright": null,
          "dimensions": {
            "height": 2832,
            "width": 4240,
          },
          "edit": {
            "background": "#8efd5a",
            "x": 466,
            "y": -571,
            "zoom": 1.394663850868741,
          },
          "id": "f5dbf0d9ed2",
          "square": {
            "alt": "Ut consequat semper viverra nam libero justo laoreet",
            "copyright": null,
            "dimensions": {
              "height": 2832,
              "width": 4240,
            },
            "edit": {
              "background": "#8efd5a",
              "x": 466,
              "y": -571,
              "zoom": 1.394663850868741,
            },
            "id": "f5dbf0d9ed2",
            "url": "https://images.unsplash.com/photo-1441974231531-c6227db76b6e?some=other&query=params",
          },
          "url": "https://images.unsplash.com/photo-1441974231531-c6227db76b6e?some=query",
        },
        "group": [
          {
            "field": {
              "alt": "Porttitor massa id neque aliquam vestibulum morbi blandit",
              "copyright": null,
              "dimensions": {
                "height": 4392,
                "width": 7372,
              },
              "edit": {
                "background": "#bc3178",
                "x": 1156,
                "y": -2223,
                "zoom": 1.602826201962965,
              },
              "id": "f5dbf0d9ed2",
              "square": {
                "alt": "Porttitor massa id neque aliquam vestibulum morbi blandit",
                "copyright": null,
                "dimensions": {
                  "height": 4392,
                  "width": 7372,
                },
                "edit": {
                  "background": "#bc3178",
                  "x": 1156,
                  "y": -2223,
                  "zoom": 1.602826201962965,
                },
                "id": "f5dbf0d9ed2",
                "url": "https://images.unsplash.com/photo-1441974231531-c6227db76b6e?some=other&query=params",
              },
              "url": "https://images.unsplash.com/photo-1441974231531-c6227db76b6e?some=query",
            },
          },
        ],
      },
      "slice_label": null,
      "slice_type": "at",
      "variation": "tortor",
      "version": "a79b9dd",
    },
  ],
}
`;

exports[`patches image fields > otherRepositoryWithThumbnails > slice 1`] = `
{
  "slices": [
    {
      "id": "e93cc3e4f28",
      "items": [
        {
          "field": {
            "alt": "Vitae sapien pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis",
            "copyright": null,
            "dimensions": {
              "height": 4000,
              "width": 6000,
            },
            "edit": {
              "background": "#c361cc",
              "x": -751,
              "y": -404,
              "zoom": 1.6465649620272602,
            },
            "id": "4f4a69ff72d",
            "square": {
              "alt": "Vitae sapien pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis",
              "copyright": null,
              "dimensions": {
                "height": 4000,
                "width": 6000,
              },
              "edit": {
                "background": "#c361cc",
                "x": -751,
                "y": -404,
                "zoom": 1.6465649620272602,
              },
              "id": "4f4a69ff72d",
              "url": "https://images.unsplash.com/photo-1470770903676-69b98201ea1c?some=other&query=params",
            },
            "url": "https://images.unsplash.com/photo-1470770903676-69b98201ea1c?some=query",
          },
        },
      ],
      "primary": {
        "field": {
          "alt": "Nunc pulvinar sapien et ligula ullamcorper malesuada proin libero nunc consequat interdum varius sit",
          "copyright": null,
          "dimensions": {
            "height": 2832,
            "width": 4240,
          },
          "edit": {
            "background": "#55e3be",
            "x": -762,
            "y": 991,
            "zoom": 1.0207384987782544,
          },
          "id": "4f4a69ff72d",
          "square": {
            "alt": "Nunc pulvinar sapien et ligula ullamcorper malesuada proin libero nunc consequat interdum varius sit",
            "copyright": null,
            "dimensions": {
              "height": 2832,
              "width": 4240,
            },
            "edit": {
              "background": "#55e3be",
              "x": -762,
              "y": 991,
              "zoom": 1.0207384987782544,
            },
            "id": "4f4a69ff72d",
            "url": "https://images.unsplash.com/photo-1470770903676-69b98201ea1c?some=other&query=params",
          },
          "url": "https://images.unsplash.com/photo-1470770903676-69b98201ea1c?some=query",
        },
      },
      "slice_label": "Pellentesque",
      "slice_type": "nulla_posuere",
    },
  ],
}
`;

exports[`patches image fields > otherRepositoryWithThumbnails > static zone 1`] = `
{
  "field": {
    "alt": "Vulputate sapien nec sagittis aliquam malesuada bibendum arcu vitae elementum curabitur vitae nunc sed",
    "copyright": null,
    "dimensions": {
      "height": 2832,
      "width": 4240,
    },
    "edit": {
      "background": "#97acc6",
      "x": 1922,
      "y": -967,
      "zoom": 1.9765406541937358,
    },
    "id": "9abffab1d17",
    "square": {
      "alt": "Vulputate sapien nec sagittis aliquam malesuada bibendum arcu vitae elementum curabitur vitae nunc sed",
      "copyright": null,
      "dimensions": {
        "height": 2832,
        "width": 4240,
      },
      "edit": {
        "background": "#97acc6",
        "x": 1922,
        "y": -967,
        "zoom": 1.9765406541937358,
      },
      "id": "9abffab1d17",
      "url": "https://images.unsplash.com/photo-1446329813274-7c9036bd9a1f?some=other&query=params",
    },
    "url": "https://images.unsplash.com/photo-1446329813274-7c9036bd9a1f?some=query",
  },
}
`;

exports[`patches image fields > otherRepositoryWithThumbnailsNoAlt > group 1`] = `
{
  "group": [
    {
      "field": {
        "alt": null,
        "copyright": null,
        "dimensions": {
          "height": 1705,
          "width": 2560,
        },
        "edit": {
          "background": "#fdb338",
          "x": 349,
          "y": 115,
          "zoom": 1.5951464943576479,
        },
        "id": "4dcf07cfc26",
        "square": {
          "alt": null,
          "copyright": null,
          "dimensions": {
            "height": 1705,
            "width": 2560,
          },
          "edit": {
            "background": "#fdb338",
            "x": 349,
            "y": 115,
            "zoom": 1.5951464943576479,
          },
          "id": "4dcf07cfc26",
          "url": "https://images.unsplash.com/photo-1553531384-397c80973a0b?some=other&query=params",
        },
        "url": "https://images.unsplash.com/photo-1553531384-397c80973a0b?some=query",
      },
    },
  ],
}
`;

exports[`patches image fields > otherRepositoryWithThumbnailsNoAlt > shared slice 1`] = `
{
  "slices": [
    {
      "id": "2ff58c741ba",
      "items": [
        {
          "field": {
            "alt": null,
            "copyright": null,
            "dimensions": {
              "height": 4000,
              "width": 6000,
            },
            "edit": {
              "background": "#61adcf",
              "x": -1586,
              "y": -2819,
              "zoom": 1.9393723758262054,
            },
            "id": "f5dbf0d9ed2",
            "square": {
              "alt": null,
              "copyright": null,
              "dimensions": {
                "height": 4000,
                "width": 6000,
              },
              "edit": {
                "background": "#61adcf",
                "x": -1586,
                "y": -2819,
                "zoom": 1.9393723758262054,
              },
              "id": "f5dbf0d9ed2",
              "url": "https://images.unsplash.com/photo-1441974231531-c6227db76b6e?some=other&query=params",
            },
            "url": "https://images.unsplash.com/photo-1441974231531-c6227db76b6e?some=query",
          },
        },
      ],
      "primary": {
        "field": {
          "alt": null,
          "copyright": null,
          "dimensions": {
            "height": 2832,
            "width": 4240,
          },
          "edit": {
            "background": "#8efd5a",
            "x": 466,
            "y": -571,
            "zoom": 1.394663850868741,
          },
          "id": "f5dbf0d9ed2",
          "square": {
            "alt": null,
            "copyright": null,
            "dimensions": {
              "height": 2832,
              "width": 4240,
            },
            "edit": {
              "background": "#8efd5a",
              "x": 466,
              "y": -571,
              "zoom": 1.394663850868741,
            },
            "id": "f5dbf0d9ed2",
            "url": "https://images.unsplash.com/photo-1441974231531-c6227db76b6e?some=other&query=params",
          },
          "url": "https://images.unsplash.com/photo-1441974231531-c6227db76b6e?some=query",
        },
        "group": [
          {
            "field": {
              "alt": null,
              "copyright": null,
              "dimensions": {
                "height": 4392,
                "width": 7372,
              },
              "edit": {
                "background": "#bc3178",
                "x": 1156,
                "y": -2223,
                "zoom": 1.602826201962965,
              },
              "id": "f5dbf0d9ed2",
              "square": {
                "alt": null,
                "copyright": null,
                "dimensions": {
                  "height": 4392,
                  "width": 7372,
                },
                "edit": {
                  "background": "#bc3178",
                  "x": 1156,
                  "y": -2223,
                  "zoom": 1.602826201962965,
                },
                "id": "f5dbf0d9ed2",
                "url": "https://images.unsplash.com/photo-1441974231531-c6227db76b6e?some=other&query=params",
              },
              "url": "https://images.unsplash.com/photo-1441974231531-c6227db76b6e?some=query",
            },
          },
        ],
      },
      "slice_label": null,
      "slice_type": "at",
      "variation": "tortor",
      "version": "a79b9dd",
    },
  ],
}
`;

exports[`patches image fields > otherRepositoryWithThumbnailsNoAlt > slice 1`] = `
{
  "slices": [
    {
      "id": "e93cc3e4f28",
      "items": [
        {
          "field": {
            "alt": null,
            "copyright": null,
            "dimensions": {
              "height": 4000,
              "width": 6000,
            },
            "edit": {
              "background": "#c361cc",
              "x": -751,
              "y": -404,
              "zoom": 1.6465649620272602,
            },
            "id": "4f4a69ff72d",
            "square": {
              "alt": null,
              "copyright": null,
              "dimensions": {
                "height": 4000,
                "width": 6000,
              },
              "edit": {
                "background": "#c361cc",
                "x": -751,
                "y": -404,
                "zoom": 1.6465649620272602,
              },
              "id": "4f4a69ff72d",
              "url": "https://images.unsplash.com/photo-1470770903676-69b98201ea1c?some=other&query=params",
            },
            "url": "https://images.unsplash.com/photo-1470770903676-69b98201ea1c?some=query",
          },
        },
      ],
      "primary": {
        "field": {
          "alt": null,
          "copyright": null,
          "dimensions": {
            "height": 2832,
            "width": 4240,
          },
          "edit": {
            "background": "#55e3be",
            "x": -762,
            "y": 991,
            "zoom": 1.0207384987782544,
          },
          "id": "4f4a69ff72d",
          "square": {
            "alt": null,
            "copyright": null,
            "dimensions": {
              "height": 2832,
              "width": 4240,
            },
            "edit": {
              "background": "#55e3be",
              "x": -762,
              "y": 991,
              "zoom": 1.0207384987782544,
            },
            "id": "4f4a69ff72d",
            "url": "https://images.unsplash.com/photo-1470770903676-69b98201ea1c?some=other&query=params",
          },
          "url": "https://images.unsplash.com/photo-1470770903676-69b98201ea1c?some=query",
        },
      },
      "slice_label": "Pellentesque",
      "slice_type": "nulla_posuere",
    },
  ],
}
`;

exports[`patches image fields > otherRepositoryWithThumbnailsNoAlt > static zone 1`] = `
{
  "field": {
    "alt": null,
    "copyright": null,
    "dimensions": {
      "height": 2832,
      "width": 4240,
    },
    "edit": {
      "background": "#97acc6",
      "x": 1922,
      "y": -967,
      "zoom": 1.9765406541937358,
    },
    "id": "9abffab1d17",
    "square": {
      "alt": null,
      "copyright": null,
      "dimensions": {
        "height": 2832,
        "width": 4240,
      },
      "edit": {
        "background": "#97acc6",
        "x": 1922,
        "y": -967,
        "zoom": 1.9765406541937358,
      },
      "id": "9abffab1d17",
      "url": "https://images.unsplash.com/photo-1446329813274-7c9036bd9a1f?some=other&query=params",
    },
    "url": "https://images.unsplash.com/photo-1446329813274-7c9036bd9a1f?some=query",
  },
}
`;

exports[`patches image fields > richTextExisting > group 1`] = `
{
  "group": [
    {
      "field": [
        {
          "spans": [],
          "text": "Nulla Aliquet Porttitor Lacus Luctus",
          "type": "heading2",
        },
        {
          "alt": null,
          "copyright": null,
          "dimensions": {
            "height": 1,
            "width": 1,
          },
          "edit": {
            "background": "transparent",
            "x": 0,
            "y": 0,
            "zoom": 0,
          },
          "id": "id-existing",
          "type": "image",
          "url": "https://images.unsplash.com/photo-1497436072909-60f360e1d4b1?w=2560&h=1440&fit=crop",
        },
      ],
    },
  ],
}
`;

exports[`patches image fields > richTextExisting > shared slice 1`] = `
{
  "slices": [
    {
      "id": "2ff58c741ba",
      "items": [
        {
          "field": [
            {
              "spans": [],
              "text": "Eu Mi",
              "type": "heading3",
            },
            {
              "alt": null,
              "copyright": null,
              "dimensions": {
                "height": 1,
                "width": 1,
              },
              "edit": {
                "background": "transparent",
                "x": 0,
                "y": 0,
                "zoom": 0,
              },
              "id": "id-existing",
              "type": "image",
              "url": "https://images.unsplash.com/photo-1604537466608-109fa2f16c3b?w=4240&h=2832&fit=crop",
            },
          ],
        },
      ],
      "primary": {
        "field": [
          {
            "spans": [],
            "text": "Fringilla Phasellus Faucibus Scelerisque Eleifend Donec Pretium",
            "type": "heading3",
          },
          {
            "alt": null,
            "copyright": null,
            "dimensions": {
              "height": 1,
              "width": 1,
            },
            "edit": {
              "background": "transparent",
              "x": 0,
              "y": 0,
              "zoom": 0,
            },
            "id": "id-existing",
            "type": "image",
            "url": "https://images.unsplash.com/photo-1604537466608-109fa2f16c3b?w=4240&h=2832&fit=crop",
          },
        ],
        "group": [
          {
            "field": [
              {
                "spans": [],
                "text": "Arcu",
                "type": "heading1",
              },
              {
                "alt": null,
                "copyright": null,
                "dimensions": {
                  "height": 1,
                  "width": 1,
                },
                "edit": {
                  "background": "transparent",
                  "x": 0,
                  "y": 0,
                  "zoom": 0,
                },
                "id": "id-existing",
                "type": "image",
                "url": "https://images.unsplash.com/photo-1604537466608-109fa2f16c3b?w=4240&h=2832&fit=crop",
              },
            ],
          },
        ],
      },
      "slice_label": null,
      "slice_type": "at",
      "variation": "tortor",
      "version": "a79b9dd",
    },
  ],
}
`;

exports[`patches image fields > richTextExisting > slice 1`] = `
{
  "slices": [
    {
      "id": "e93cc3e4f28",
      "items": [
        {
          "field": [
            {
              "spans": [],
              "text": "Habitasse platea dictumst quisque sagittis purus sit",
              "type": "o-list-item",
            },
            {
              "alt": null,
              "copyright": null,
              "dimensions": {
                "height": 1,
                "width": 1,
              },
              "edit": {
                "background": "transparent",
                "x": 0,
                "y": 0,
                "zoom": 0,
              },
              "id": "id-existing",
              "type": "image",
              "url": "https://images.unsplash.com/photo-1604537529428-15bcbeecfe4d?w=4240&h=2832&fit=crop",
            },
          ],
        },
      ],
      "primary": {
        "field": [
          {
            "spans": [],
            "text": "Ac Orci Phasellus Egestas Tellus",
            "type": "heading5",
          },
          {
            "alt": null,
            "copyright": null,
            "dimensions": {
              "height": 1,
              "width": 1,
            },
            "edit": {
              "background": "transparent",
              "x": 0,
              "y": 0,
              "zoom": 0,
            },
            "id": "id-existing",
            "type": "image",
            "url": "https://images.unsplash.com/photo-1604537529428-15bcbeecfe4d?w=4240&h=2832&fit=crop",
          },
        ],
      },
      "slice_label": "Pellentesque",
      "slice_type": "nulla_posuere",
    },
  ],
}
`;

exports[`patches image fields > richTextExisting > static zone 1`] = `
{
  "field": [
    {
      "spans": [],
      "text": "Elementum Integer",
      "type": "heading6",
    },
    {
      "alt": null,
      "copyright": null,
      "dimensions": {
        "height": 1,
        "width": 1,
      },
      "edit": {
        "background": "transparent",
        "x": 0,
        "y": 0,
        "zoom": 0,
      },
      "id": "id-existing",
      "type": "image",
      "url": "https://images.unsplash.com/photo-1553531384-397c80973a0b?w=4335&h=6502&fit=crop",
    },
  ],
}
`;

exports[`patches image fields > richTextNew > group 1`] = `
{
  "group": [
    {
      "field": [
        {
          "spans": [],
          "text": "Nulla Aliquet Porttitor Lacus Luctus",
          "type": "heading2",
        },
        {
          "alt": null,
          "copyright": null,
          "dimensions": {
            "height": 1,
            "width": 1,
          },
          "edit": {
            "background": "transparent",
            "x": 0,
            "y": 0,
            "zoom": 0,
          },
          "id": "cdfdd322ca9",
          "type": "image",
          "url": "https://images.unsplash.com/photo-1431794062232-2a99a5431c6c?w=6000&h=4000&fit=crop",
        },
      ],
    },
  ],
}
`;

exports[`patches image fields > richTextNew > shared slice 1`] = `
{
  "slices": [
    {
      "id": "2ff58c741ba",
      "items": [
        {
          "field": [
            {
              "spans": [],
              "text": "Eu Mi",
              "type": "heading3",
            },
            {
              "alt": null,
              "copyright": null,
              "dimensions": {
                "height": 1,
                "width": 1,
              },
              "edit": {
                "background": "transparent",
                "x": 0,
                "y": 0,
                "zoom": 0,
              },
              "id": "bc31787853a",
              "type": "image",
              "url": "https://images.unsplash.com/photo-1470770903676-69b98201ea1c?w=4554&h=3036&fit=crop",
            },
          ],
        },
      ],
      "primary": {
        "field": [
          {
            "spans": [],
            "text": "Fringilla Phasellus Faucibus Scelerisque Eleifend Donec Pretium",
            "type": "heading3",
          },
          {
            "alt": null,
            "copyright": null,
            "dimensions": {
              "height": 1,
              "width": 1,
            },
            "edit": {
              "background": "transparent",
              "x": 0,
              "y": 0,
              "zoom": 0,
            },
            "id": "bc31787853a",
            "type": "image",
            "url": "https://images.unsplash.com/photo-1470770903676-69b98201ea1c?w=4554&h=3036&fit=crop",
          },
        ],
        "group": [
          {
            "field": [
              {
                "spans": [],
                "text": "Arcu",
                "type": "heading1",
              },
              {
                "alt": null,
                "copyright": null,
                "dimensions": {
                  "height": 1,
                  "width": 1,
                },
                "edit": {
                  "background": "transparent",
                  "x": 0,
                  "y": 0,
                  "zoom": 0,
                },
                "id": "bc31787853a",
                "type": "image",
                "url": "https://images.unsplash.com/photo-1470770903676-69b98201ea1c?w=4554&h=3036&fit=crop",
              },
            ],
          },
        ],
      },
      "slice_label": null,
      "slice_type": "at",
      "variation": "tortor",
      "version": "a79b9dd",
    },
  ],
}
`;

exports[`patches image fields > richTextNew > slice 1`] = `
{
  "slices": [
    {
      "id": "e93cc3e4f28",
      "items": [
        {
          "field": [
            {
              "spans": [],
              "text": "Habitasse platea dictumst quisque sagittis purus sit",
              "type": "o-list-item",
            },
            {
              "alt": null,
              "copyright": null,
              "dimensions": {
                "height": 1,
                "width": 1,
              },
              "edit": {
                "background": "transparent",
                "x": 0,
                "y": 0,
                "zoom": 0,
              },
              "id": "7963dc361cc",
              "type": "image",
              "url": "https://images.unsplash.com/photo-1470770903676-69b98201ea1c?w=4554&h=3036&fit=crop",
            },
          ],
        },
      ],
      "primary": {
        "field": [
          {
            "spans": [],
            "text": "Ac Orci Phasellus Egestas Tellus",
            "type": "heading5",
          },
          {
            "alt": null,
            "copyright": null,
            "dimensions": {
              "height": 1,
              "width": 1,
            },
            "edit": {
              "background": "transparent",
              "x": 0,
              "y": 0,
              "zoom": 0,
            },
            "id": "7963dc361cc",
            "type": "image",
            "url": "https://images.unsplash.com/photo-1470770903676-69b98201ea1c?w=4554&h=3036&fit=crop",
          },
        ],
      },
      "slice_label": "Pellentesque",
      "slice_type": "nulla_posuere",
    },
  ],
}
`;

exports[`patches image fields > richTextNew > static zone 1`] = `
{
  "field": [
    {
      "spans": [],
      "text": "Elementum Integer",
      "type": "heading6",
    },
    {
      "alt": null,
      "copyright": null,
      "dimensions": {
        "height": 1,
        "width": 1,
      },
      "edit": {
        "background": "transparent",
        "x": 0,
        "y": 0,
        "zoom": 0,
      },
      "id": "0bbad670dad",
      "type": "image",
      "url": "https://images.unsplash.com/photo-1470071459604-3b5ec3a7fe05?w=7372&h=4392&fit=crop",
    },
  ],
}
`;

exports[`patches image fields > richTextOtherRepository > group 1`] = `
{
  "group": [
    {
      "field": [
        {
          "spans": [],
          "text": "Nulla Aliquet Porttitor Lacus Luctus",
          "type": "heading2",
        },
        {
          "alt": "Donec enim diam vulputate ut pharetra sit amet aliquam id diam",
          "copyright": null,
          "dimensions": {
            "height": 4000,
            "width": 6000,
          },
          "edit": {
            "background": "#7cfc26",
            "x": 2977,
            "y": -1163,
            "zoom": 1.0472585898934068,
          },
          "id": "e8d0985c099",
          "type": "image",
          "url": "https://images.unsplash.com/photo-1553531384-397c80973a0b",
        },
      ],
    },
  ],
}
`;

exports[`patches image fields > richTextOtherRepository > shared slice 1`] = `
{
  "slices": [
    {
      "id": "2ff58c741ba",
      "items": [
        {
          "field": [
            {
              "spans": [],
              "text": "Facilisis",
              "type": "heading3",
            },
            {
              "alt": "Nullam vehicula ipsum a arcu cursus vitae congue mauris rhoncus aenean vel elit scelerisque",
              "copyright": null,
              "dimensions": {
                "height": 4392,
                "width": 7372,
              },
              "edit": {
                "background": "#37ae3f",
                "x": -1505,
                "y": 902,
                "zoom": 1.8328975606320652,
              },
              "id": "3fc0dfa9fe9",
              "type": "image",
              "url": "https://images.unsplash.com/photo-1431794062232-2a99a5431c6c",
            },
          ],
        },
      ],
      "primary": {
        "field": [
          {
            "spans": [],
            "text": "Fringilla Phasellus Faucibus Scelerisque Eleifend Donec Pretium",
            "type": "heading3",
          },
          {
            "alt": "Proin libero nunc consequat interdum varius",
            "copyright": null,
            "dimensions": {
              "height": 3036,
              "width": 4554,
            },
            "edit": {
              "background": "#904f4f",
              "x": 1462,
              "y": 1324,
              "zoom": 1.504938844941775,
            },
            "id": "3fc0dfa9fe9",
            "type": "image",
            "url": "https://images.unsplash.com/photo-1431794062232-2a99a5431c6c",
          },
        ],
        "group": [
          {
            "field": [
              {
                "spans": [],
                "text": "Egestas Integer Eget Aliquet Nibh",
                "type": "heading5",
              },
              {
                "alt": "Arcu cursus vitae congue mauris",
                "copyright": null,
                "dimensions": {
                  "height": 4392,
                  "width": 7372,
                },
                "edit": {
                  "background": "#5f7a9b",
                  "x": -119,
                  "y": -2667,
                  "zoom": 1.9681315715350518,
                },
                "id": "3fc0dfa9fe9",
                "type": "image",
                "url": "https://images.unsplash.com/photo-1431794062232-2a99a5431c6c",
              },
            ],
          },
        ],
      },
      "slice_label": null,
      "slice_type": "at",
      "variation": "tortor",
      "version": "a79b9dd",
    },
  ],
}
`;

exports[`patches image fields > richTextOtherRepository > slice 1`] = `
{
  "slices": [
    {
      "id": "e93cc3e4f28",
      "items": [
        {
          "field": [
            {
              "spans": [],
              "text": "Amet",
              "type": "heading5",
            },
            {
              "alt": "Auctor neque vitae tempus quam",
              "copyright": null,
              "dimensions": {
                "height": 1440,
                "width": 2560,
              },
              "edit": {
                "background": "#5bc5aa",
                "x": -1072,
                "y": -281,
                "zoom": 1.3767766101231744,
              },
              "id": "f70ca27104d",
              "type": "image",
              "url": "https://images.unsplash.com/photo-1426604966848-d7adac402bff",
            },
          ],
        },
      ],
      "primary": {
        "field": [
          {
            "spans": [],
            "text": "Ac Orci Phasellus Egestas Tellus",
            "type": "heading5",
          },
          {
            "alt": "Urna id volutpat lacus laoreet non curabitur gravida arcu ac tortor",
            "copyright": null,
            "dimensions": {
              "height": 3036,
              "width": 4554,
            },
            "edit": {
              "background": "#4860cb",
              "x": 280,
              "y": -379,
              "zoom": 1.2389796902982004,
            },
            "id": "f70ca27104d",
            "type": "image",
            "url": "https://images.unsplash.com/photo-1426604966848-d7adac402bff",
          },
        ],
      },
      "slice_label": "Pellentesque",
      "slice_type": "nulla_posuere",
    },
  ],
}
`;

exports[`patches image fields > richTextOtherRepository > static zone 1`] = `
{
  "field": [
    {
      "spans": [],
      "text": "Elementum Integer",
      "type": "heading6",
    },
    {
      "alt": "Interdum velit euismod in pellentesque",
      "copyright": null,
      "dimensions": {
        "height": 4392,
        "width": 7372,
      },
      "edit": {
        "background": "#ab1d17",
        "x": 3605,
        "y": 860,
        "zoom": 1.9465488211593005,
      },
      "id": "04a95cc61c3",
      "type": "image",
      "url": "https://images.unsplash.com/photo-1418065460487-3e41a6c84dc5",
    },
  ],
}
`;
